src/test/resources/org/korren/test/jlox/samples/errors/super_without_super.lox
class Eclair {
  cook() {
    super.cook();  // Error: "[line 3] Error at 'super': Can't use 'super' in a class with no superclass."
    print "Pipe full of crème pâtissière.";
  }
}

Eclair().cook();
